working local deployment frontend

--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "thingy-client-orange:build:production"
+              "browserTarget": "thingy-client-orange:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             },
             "development": {
               "browserTarget": "thingy-client-orange:build:development",
