--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "chart.js": "^4.4.0",
     "keycloak-angular": "^14.1.0",
     "keycloak-js": "^22.0.4",
     "rxjs": "~7.8.0",
